--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -1,16 +1,16 @@
 /*
 * Large-element styles
 */
-/* line 28, ../sass/style.scss */
+/* line 30, ../sass/style.scss */
 body {
-  background-color: #fff;
+  background-color: #ccc;
 }
 
-/* line 32, ../sass/style.scss */
+/* line 34, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
-  background-color: #777;
+  background-color: #eeebd7;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -20,7 +20,7 @@ body {
   padding: 0px;
 }
 
-/* line 45, ../sass/style.scss */
+/* line 47, ../sass/style.scss */
 #strip {
   position: absolute;
   top: 0px;
@@ -31,16 +31,15 @@ body {
 /*
 * Main nav styles
 */
-/* line 55, ../sass/style.scss */
+/* line 57, ../sass/style.scss */
 #features {
-  height: 26px;
+  height: 36px;
   width: 976px;
   position: absolute;
-  top: 344px;
+  top: 334px;
   left: 0px;
-  overflow: hidden;
 }
-/* line 63, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 #features ul {
   margin: 0px;
   margin-left: 0px;
@@ -48,7 +47,7 @@ body {
   height: 100%;
   width: 100%;
 }
-/* line 69, ../sass/style.scss */
+/* line 71, ../sass/style.scss */
 #features ul li {
   width: 244px;
   display: block;
@@ -64,52 +63,50 @@ body {
   padding: 0px;
   color: #eeebd7;
 }
-/* line 81, ../sass/style.scss */
+/* line 83, ../sass/style.scss */
 #features ul li.opened {
   text-decoration: overline;
 }
-/* line 85, ../sass/style.scss */
+/* line 87, ../sass/style.scss */
 #features ul .feature-nav {
   position: relative;
   height: 18px;
-  top: 6px;
+  top: 11px;
 }
 
 /*
 * Inside of the feature itself. General styles.
 */
-/* line 97, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 974px;
-  overflow: hidden;
   float: left;
   top: 0px;
 }
-/* line 104, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 .feature .feature-content {
   padding: 0px;
-  height: 344px;
-  overflow: hidden;
+  height: 330px;
   top: 0px;
 }
 
 /*
 * For the Stories feature.
 */
-/* line 116, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 #stories #stories-thumbs {
   overflow: hidden;
   *zoom: 1;
   float: right;
-  height: 344px;
-  width: 344px;
+  height: 330px;
+  width: 330px;
   padding: 8px;
 }
-/* line 122, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 #stories #stories-thumbs figure {
-  height: 102.667px;
-  width: 102.667px;
+  height: 98px;
+  width: 98px;
   background-color: #000;
   margin: 4px;
   padding: 0px;
@@ -117,13 +114,47 @@ body {
   *zoom: 1;
   float: right;
 }
-/* line 130, ../sass/style.scss */
+/* line 132, ../sass/style.scss */
 #stories #stories-thumbs figure img {
   width: 100%;
 }
-/* line 134, ../sass/style.scss */
+/* line 136, ../sass/style.scss */
 #stories #stories-thumbs .opened {
-  -webkit-box-shadow: 0px 0px 6px #ffeeee;
-  -moz-box-shadow: 0px 0px 6px #ffeeee;
-  box-shadow: 0px 0px 6px #ffeeee;
+  -webkit-box-shadow: 0px 0px 6px #333333;
+  -moz-box-shadow: 0px 0px 6px #333333;
+  box-shadow: 0px 0px 6px #333333;
+}
+/* line 140, ../sass/style.scss */
+#stories .story {
+  width: 604px;
+  float: left;
+  position: absolute;
+  top: 0px;
+}
+/* line 145, ../sass/style.scss */
+#stories .story .story-image {
+  width: 302px;
+  height: 100%;
+  overflow: hidden;
+  overflow: hidden;
+  *zoom: 1;
+  float: left;
+}
+/* line 151, ../sass/style.scss */
+#stories .story .story-image img {
+  height: 100%;
+  background-color: #000;
+}
+/* line 156, ../sass/style.scss */
+#stories .story .story-blurb {
+  width: 302px;
+  height: 330px;
+  overflow: hidden;
+  *zoom: 1;
+  float: right;
+}
+/* line 161, ../sass/style.scss */
+#stories .story .story-blurb .blurb {
+  position: absolute;
+  top: 20px;
 }
