--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -4,24 +4,25 @@ $hero-width: 974px;
 $hero-height: 370px;
 $hero-padding: 4px;
 
-$features-list-outer-height: 40px;
+$feature-content-padding: 0px;
+$feature-content-height: $hero-width/3;
+
+$features-list-outer-height: $hero-height - $feature-content-height;
 $features-list-outer-width: $hero-width + 2;
 $features-list-padding: 2px;
 $features-item-width: $features-list-outer-width/4;
 $features-list-margin: 0px;
 $features-item-line-height: 18px;
 
-$feature-content-padding: 0px;
-$feature-content-height: $hero-height - $features-list-outer-height;
-
 $stories-thumb-margin: 4px;
 $stories-thumb-dim: $feature-content-height/3 - $stories-thumb-margin*3;
 
 $story-width: $hero-width - $hero-height;
+$story-padding: 8px;
 
 $light-red:#A61C1F;
 $dark-red:#711312;
-$cream:#EEEBD7;
+$cream:#FAF7ED;
 
 
 /*
@@ -58,9 +59,8 @@ body {
 	height: $features-list-outer-height - $features-list-padding*2;
 	width: $features-list-outer-width;
 	position: absolute;
-	top: $hero-height - $features-list-outer-height +4;
+	top: $hero-height - $features-list-outer-height +6;
 	left: $features-list-margin;
-	//overflow: hidden;
 	
 	ul{
 		margin:0px;
@@ -99,7 +99,6 @@ body {
 .feature{
 	padding: 0px;
 	width: $hero-width;
-	//overflow: hidden;
 	float: left;
 	top: 0px;
 	
@@ -129,6 +128,7 @@ body {
 			padding: 0px;
 			@include clearfix;
 			float: right;
+			@include box-shadow(0px 0px 6px #ddd);
 			img{
 				width: 100%;
 			}
@@ -153,14 +153,21 @@ body {
 				background-color: #000;
 			}
 		}
-		.story-blurb{
-			width: $story-width/2;
+		section.story-blurb{
+			width: $story-width/2 - $story-padding *4;
 			height: $feature-content-height;
+			padding: $story-padding;
+			position: relative;
+			top: 20px;
 			@include clearfix;
 			float: right;
+			header.story-blurb{
+				font-family: "Georgia", "Times New Roman", serif;
+			}
 			.blurb{
-				position: absolute;
-				top: 20px;
+				p{
+					font-family: "Helvetica", "Arial", sans-serif;
+				}
 			}
 		}
 	}
