--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -18,7 +18,7 @@ $stories-thumb-margin: 4px;
 $stories-thumb-dim: $feature-content-height/3 - $stories-thumb-margin*3;
 
 $story-width: $hero-width*(2/3);
-$story-padding: 4px;
+$story-padding: 18px;
 
 $highlight-red: #F25757;
 $light-red:#ED3232;
@@ -134,6 +134,7 @@ body {
 		height: $feature-content-height;
 		width: $feature-content-height;
 		padding: 8px;
+		background-color: #eee;
 		figure{
 			height: $stories-thumb-dim;
 			width: $stories-thumb-dim;
@@ -152,11 +153,12 @@ body {
 		}
 	}
 	.story{
-		width: $story-width;
+		width: $feature-content-height*2;
 		position: absolute;
 		top: 0px;
+		background-color: #666;
 		.story-image{
-			width: $story-width/2;
+			width: $feature-content-height;
 			height: 100%;
 			overflow: hidden;
 			@include clearfix;
@@ -167,11 +169,11 @@ body {
 			}
 		}
 		section.story-blurb{
-			width: $story-width/2 - $story-padding *4;
+			width: $feature-content-height;
 			height: $feature-content-height;
-			padding: $story-padding;
+			//padding: $story-padding;
 			position: relative;
-			top: 30px;
+			left: 4px;
 			@include clearfix;
 			float: right;
 			header.story-blurb{
@@ -194,7 +196,7 @@ body {
 				padding: 6px;
 				float: right;
 				font-size: 11px;
-				margin-right: 20px;
+				//margin-right: 20px;
 				@include border-radius(3px);
 				@include box-shadow(0px 0px 6px #aaa);
 				@include text-shadow(rgba(black, 0.5) 0 0 2px);
