--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -115,8 +115,9 @@ body {
   height: 324.667px;
   width: 324.667px;
   padding: 8px;
+  background-color: #eee;
 }
-/* line 137, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 #stories #stories-thumbs figure {
   height: 96.222px;
   width: 96.222px;
@@ -131,24 +132,25 @@ body {
   -o-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 146, ../sass/style.scss */
+/* line 147, ../sass/style.scss */
 #stories #stories-thumbs figure img {
   width: 100%;
 }
-/* line 150, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 #stories #stories-thumbs .opened {
   -moz-box-shadow: 0px 0px 6px #333333;
   -webkit-box-shadow: 0px 0px 6px #333333;
   -o-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 154, ../sass/style.scss */
+/* line 155, ../sass/style.scss */
 #stories .story {
   width: 649.333px;
   position: absolute;
   top: 0px;
+  background-color: #666;
 }
-/* line 158, ../sass/style.scss */
+/* line 160, ../sass/style.scss */
 #stories .story .story-image {
   width: 324.667px;
   height: 100%;
@@ -157,37 +159,36 @@ body {
   *zoom: 1;
   float: left;
 }
-/* line 164, ../sass/style.scss */
+/* line 166, ../sass/style.scss */
 #stories .story .story-image img {
   height: 100%;
   background-color: #000;
 }
-/* line 169, ../sass/style.scss */
+/* line 171, ../sass/style.scss */
 #stories .story section.story-blurb {
-  width: 308.667px;
+  width: 324.667px;
   height: 324.667px;
-  padding: 4px;
   position: relative;
-  top: 30px;
+  left: 4px;
   overflow: hidden;
   *zoom: 1;
   float: right;
 }
-/* line 177, ../sass/style.scss */
+/* line 179, ../sass/style.scss */
 #stories .story section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 24px;
 }
-/* line 181, ../sass/style.scss */
+/* line 183, ../sass/style.scss */
 #stories .story section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 183, ../sass/style.scss */
+/* line 185, ../sass/style.scss */
 #stories .story section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 13px;
 }
-/* line 188, ../sass/style.scss */
+/* line 190, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more {
   background-color: #d42222;
   border: none;
@@ -197,7 +198,6 @@ body {
   padding: 6px;
   float: right;
   font-size: 11px;
-  margin-right: 20px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   -o-border-radius: 3px;
@@ -210,11 +210,11 @@ body {
   box-shadow: 0px 0px 6px #aaaaaa;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 203, ../sass/style.scss */
+/* line 205, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:hover {
   background-color: #ed3232;
 }
-/* line 207, ../sass/style.scss */
+/* line 209, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:active {
   background-color: #a61c1f;
 }
