--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -147,8 +147,9 @@ body {
   width: 649.333px;
   position: absolute;
   top: 0px;
+  display: none;
 }
-/* line 158, ../sass/style.scss */
+/* line 159, ../sass/style.scss */
 #stories .story .story-image {
   width: 324.667px;
   height: 100%;
@@ -157,12 +158,12 @@ body {
   *zoom: 1;
   float: left;
 }
-/* line 164, ../sass/style.scss */
+/* line 165, ../sass/style.scss */
 #stories .story .story-image img {
-  height: 100%;
+  width: 100%;
   background-color: #000;
 }
-/* line 169, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 #stories .story section.story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -173,22 +174,22 @@ body {
   *zoom: 1;
   float: right;
 }
-/* line 177, ../sass/style.scss */
+/* line 178, ../sass/style.scss */
 #stories .story section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
 }
-/* line 181, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
 #stories .story section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 183, ../sass/style.scss */
+/* line 184, ../sass/style.scss */
 #stories .story section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
-/* line 189, ../sass/style.scss */
+/* line 190, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more {
   background-color: #d42222;
   border: none;
@@ -210,11 +211,15 @@ body {
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 203, ../sass/style.scss */
+/* line 204, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:hover {
   background-color: #ed3232;
 }
-/* line 207, ../sass/style.scss */
+/* line 208, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:active {
   background-color: #a61c1f;
+}
+/* line 213, ../sass/style.scss */
+#stories .story.opened {
+  display: block;
 }
