--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -158,13 +158,13 @@ body {
 		display: none;
 		.story-image{
 			width: $feature-content-height;
-			height: 100%;
+			height: $feature-content-height + $hero-padding*2;
 			overflow: hidden;
 			@include clearfix;
 			float: left;
+			background-color: #000;
 			img{
 				width: 100%;
-				background-color: #000;
 			}
 		}
 		section.story-blurb{
