--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -1,12 +1,12 @@
 /*
 * Large-element styles
 */
-/* line 37, ../sass/style.scss */
+/* line 40, ../sass/style.scss */
 body {
   background-color: #ccc;
 }
 
-/* line 41, ../sass/style.scss */
+/* line 44, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
@@ -20,7 +20,7 @@ body {
   padding: 0px;
 }
 
-/* line 54, ../sass/style.scss */
+/* line 57, ../sass/style.scss */
 #strip {
   position: absolute;
   top: 0px;
@@ -31,7 +31,7 @@ body {
 /*
 * Main nav styles
 */
-/* line 64, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 #features {
   height: 41.333px;
   width: 976px;
@@ -49,7 +49,7 @@ body {
   background-image: linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
   text-transform: uppercase;
 }
-/* line 75, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 #features ul {
   margin: 0px;
   margin-left: 0px;
@@ -57,7 +57,7 @@ body {
   height: 100%;
   width: 100%;
 }
-/* line 81, ../sass/style.scss */
+/* line 84, ../sass/style.scss */
 #features ul li {
   width: 244px;
   display: block;
@@ -69,16 +69,16 @@ body {
   color: #faf7ed;
   font-family: "Helvetica", "Arial", sans-serif;
 }
-/* line 93, ../sass/style.scss */
+/* line 96, ../sass/style.scss */
 #features ul li.opened {
   text-shadow: rgba(250, 247, 237, 0.4) 0 0 4px;
 }
-/* line 97, ../sass/style.scss */
+/* line 100, ../sass/style.scss */
 #features ul li:hover {
   color: #FFFDF5;
   text-shadow: rgba(250, 247, 237, 0.8) 0 0 4px;
 }
-/* line 102, ../sass/style.scss */
+/* line 105, ../sass/style.scss */
 #features ul .feature-nav {
   position: relative;
   height: 18px;
@@ -88,14 +88,14 @@ body {
 /*
 * Inside of the feature itself. General styles.
 */
-/* line 114, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 974px;
   float: left;
   top: 0px;
 }
-/* line 120, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 .feature .feature-content {
   padding: 0px;
   height: 324.667px;
@@ -105,7 +105,7 @@ body {
 /*
 * For the Stories feature.
 */
-/* line 131, ../sass/style.scss */
+/* line 134, ../sass/style.scss */
 #stories #stories-thumbs {
   overflow: hidden;
   *zoom: 1;
@@ -114,7 +114,7 @@ body {
   width: 324.667px;
   padding: 8px;
 }
-/* line 137, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 #stories #stories-thumbs figure {
   height: 96.222px;
   width: 96.222px;
@@ -128,24 +128,24 @@ body {
   -moz-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 146, ../sass/style.scss */
+/* line 149, ../sass/style.scss */
 #stories #stories-thumbs figure img {
   width: 100%;
 }
-/* line 150, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 #stories #stories-thumbs .opened {
   -webkit-box-shadow: 0px 0px 6px #333333;
   -moz-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 154, ../sass/style.scss */
+/* line 157, ../sass/style.scss */
 #stories .story {
   width: 649.333px;
   position: absolute;
   top: 0px;
   display: none;
 }
-/* line 159, ../sass/style.scss */
+/* line 162, ../sass/style.scss */
 #stories .story .story-image {
   width: 324.667px;
   height: 332.667px;
@@ -155,11 +155,11 @@ body {
   float: left;
   background-color: #000;
 }
-/* line 166, ../sass/style.scss */
+/* line 169, ../sass/style.scss */
 #stories .story .story-image img {
   width: 100%;
 }
-/* line 170, ../sass/style.scss */
+/* line 173, ../sass/style.scss */
 #stories .story section.story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -170,22 +170,22 @@ body {
   *zoom: 1;
   float: right;
 }
-/* line 178, ../sass/style.scss */
+/* line 181, ../sass/style.scss */
 #stories .story section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
 }
-/* line 182, ../sass/style.scss */
+/* line 185, ../sass/style.scss */
 #stories .story section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 184, ../sass/style.scss */
+/* line 187, ../sass/style.scss */
 #stories .story section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
-/* line 190, ../sass/style.scss */
+/* line 193, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more {
   background-color: #d42222;
   border: none;
@@ -205,15 +205,15 @@ body {
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 204, ../sass/style.scss */
+/* line 207, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:hover {
   background-color: #ed3232;
 }
-/* line 208, ../sass/style.scss */
+/* line 211, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:active {
   background-color: #a61c1f;
 }
-/* line 213, ../sass/style.scss */
+/* line 216, ../sass/style.scss */
 #stories .story.opened {
   display: block;
 }
@@ -221,11 +221,63 @@ body {
 /*
 * For the Photos feature.
 */
-/* line 222, ../sass/style.scss */
-#photos figure {
+/* line 225, ../sass/style.scss */
+#photos .feature-content {
+  margin: 0px;
+  padding: 0px;
+  height: 330.667px;
+  overflow: hidden;
+  *zoom: 1;
+  float: left;
+  width: 100%;
+}
+/* line 234, ../sass/style.scss */
+#photos .feature-article {
+  float: left;
+}
+/* line 236, ../sass/style.scss */
+#photos .feature-article figure {
+  width: 100%;
+  height: 100%;
   margin: 0px;
 }
-/* line 224, ../sass/style.scss */
-#photos figure img {
+/* line 240, ../sass/style.scss */
+#photos .feature-article figure img {
   width: 100%;
+  float: left;
+  position: relative;
+  top: -200px;
+}
+/* line 249, ../sass/style.scss */
+#photos #photos-thumbs {
+  width: 73.167px;
+  height: 324.667px;
+  position: absolute;
+  top: 4px;
+  margin: 4px;
+  margin-left: 892.833px;
+}
+/* line 257, ../sass/style.scss */
+#photos #photos-thumbs figure {
+  height: 65.167px;
+  width: 65.167px;
+  margin: 4px;
+  background-color: #000;
+  padding: 0px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 265, ../sass/style.scss */
+#photos #photos-thumbs figure img {
+  height: 100%;
+  width: 100%;
+}
+/* line 270, ../sass/style.scss */
+#photos #photos-thumbs figure.opened {
+  -webkit-box-shadow: 0px 0px 5px black;
+  -moz-box-shadow: 0px 0px 5px black;
+  box-shadow: 0px 0px 5px black;
 }
