--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -1,12 +1,15 @@
 /*
+* Variables and imports
+*/
+/*
 * Large-element styles
 */
-/* line 40, ../sass/style.scss */
+/* line 42, ../sass/style.scss */
 body {
   background-color: #ccc;
 }
 
-/* line 44, ../sass/style.scss */
+/* line 46, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
@@ -20,7 +23,7 @@ body {
   padding: 0px;
 }
 
-/* line 57, ../sass/style.scss */
+/* line 59, ../sass/style.scss */
 #strip {
   position: absolute;
   top: 0px;
@@ -31,7 +34,7 @@ body {
 /*
 * Main nav styles
 */
-/* line 67, ../sass/style.scss */
+/* line 69, ../sass/style.scss */
 #features {
   height: 41.333px;
   width: 976px;
@@ -49,7 +52,7 @@ body {
   background-image: linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
   text-transform: uppercase;
 }
-/* line 78, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 #features ul {
   margin: 0px;
   margin-left: 0px;
@@ -57,7 +60,7 @@ body {
   height: 100%;
   width: 100%;
 }
-/* line 84, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 #features ul li {
   width: 244px;
   display: block;
@@ -69,16 +72,16 @@ body {
   color: #faf7ed;
   font-family: "Helvetica", "Arial", sans-serif;
 }
-/* line 96, ../sass/style.scss */
+/* line 98, ../sass/style.scss */
 #features ul li.opened {
   text-shadow: rgba(250, 247, 237, 0.4) 0 0 4px;
 }
-/* line 100, ../sass/style.scss */
+/* line 102, ../sass/style.scss */
 #features ul li:hover {
   color: #FFFDF5;
   text-shadow: rgba(250, 247, 237, 0.8) 0 0 4px;
 }
-/* line 105, ../sass/style.scss */
+/* line 107, ../sass/style.scss */
 #features ul .feature-nav {
   position: relative;
   height: 18px;
@@ -88,14 +91,14 @@ body {
 /*
 * Inside of the feature itself. General styles.
 */
-/* line 117, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 974px;
   float: left;
   top: 0px;
 }
-/* line 123, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .feature .feature-content {
   padding: 0px;
   height: 324.667px;
@@ -105,8 +108,8 @@ body {
 /*
 * For the Stories feature.
 */
-/* line 134, ../sass/style.scss */
-#stories #stories-thumbs {
+/* line 135, ../sass/style.scss */
+#stories .thumbs {
   overflow: hidden;
   *zoom: 1;
   float: right;
@@ -114,8 +117,8 @@ body {
   width: 324.667px;
   padding: 8px;
 }
-/* line 140, ../sass/style.scss */
-#stories #stories-thumbs figure {
+/* line 141, ../sass/style.scss */
+#stories .thumbs figure {
   height: 96.222px;
   width: 96.222px;
   background-color: #000;
@@ -128,24 +131,24 @@ body {
   -moz-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 149, ../sass/style.scss */
-#stories #stories-thumbs figure img {
+/* line 150, ../sass/style.scss */
+#stories .thumbs figure img {
   width: 100%;
 }
-/* line 153, ../sass/style.scss */
-#stories #stories-thumbs .opened {
+/* line 154, ../sass/style.scss */
+#stories .thumbs .opened {
   -webkit-box-shadow: 0px 0px 6px #333333;
   -moz-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 157, ../sass/style.scss */
+/* line 158, ../sass/style.scss */
 #stories .story {
   width: 649.333px;
   position: absolute;
   top: 0px;
   display: none;
 }
-/* line 162, ../sass/style.scss */
+/* line 163, ../sass/style.scss */
 #stories .story .story-image {
   width: 324.667px;
   height: 332.667px;
@@ -155,11 +158,11 @@ body {
   float: left;
   background-color: #000;
 }
-/* line 169, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 #stories .story .story-image img {
   width: 100%;
 }
-/* line 173, ../sass/style.scss */
+/* line 174, ../sass/style.scss */
 #stories .story section.story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -170,22 +173,22 @@ body {
   *zoom: 1;
   float: right;
 }
-/* line 181, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
 #stories .story section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
 }
-/* line 185, ../sass/style.scss */
+/* line 186, ../sass/style.scss */
 #stories .story section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 187, ../sass/style.scss */
+/* line 188, ../sass/style.scss */
 #stories .story section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
-/* line 193, ../sass/style.scss */
+/* line 194, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more {
   background-color: #d42222;
   border: none;
@@ -205,15 +208,15 @@ body {
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 207, ../sass/style.scss */
+/* line 208, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:hover {
   background-color: #ed3232;
 }
-/* line 211, ../sass/style.scss */
+/* line 212, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:active {
   background-color: #a61c1f;
 }
-/* line 216, ../sass/style.scss */
+/* line 217, ../sass/style.scss */
 #stories .story.opened {
   display: block;
 }
@@ -221,7 +224,7 @@ body {
 /*
 * For the Photos feature.
 */
-/* line 225, ../sass/style.scss */
+/* line 226, ../sass/style.scss */
 #photos .feature-content {
   margin: 0px;
   padding: 0px;
@@ -231,25 +234,25 @@ body {
   float: left;
   width: 100%;
 }
-/* line 234, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 #photos .feature-article {
   float: left;
 }
-/* line 236, ../sass/style.scss */
+/* line 237, ../sass/style.scss */
 #photos .feature-article figure {
   width: 100%;
   height: 100%;
   margin: 0px;
 }
-/* line 240, ../sass/style.scss */
+/* line 241, ../sass/style.scss */
 #photos .feature-article figure img {
   width: 100%;
   float: left;
   position: relative;
   top: -200px;
 }
-/* line 249, ../sass/style.scss */
-#photos #photos-thumbs {
+/* line 250, ../sass/style.scss */
+#photos .thumbs {
   width: 73.167px;
   height: 324.667px;
   position: absolute;
@@ -257,8 +260,8 @@ body {
   margin: 4px;
   margin-left: 892.833px;
 }
-/* line 257, ../sass/style.scss */
-#photos #photos-thumbs figure {
+/* line 258, ../sass/style.scss */
+#photos .thumbs figure {
   height: 65.167px;
   width: 65.167px;
   margin: 4px;
@@ -270,13 +273,13 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 265, ../sass/style.scss */
-#photos #photos-thumbs figure img {
+/* line 266, ../sass/style.scss */
+#photos .thumbs figure img {
   height: 100%;
   width: 100%;
 }
-/* line 270, ../sass/style.scss */
-#photos #photos-thumbs figure.opened {
+/* line 271, ../sass/style.scss */
+#photos .thumbs figure.opened {
   -webkit-box-shadow: 0px 0px 5px black;
   -moz-box-shadow: 0px 0px 5px black;
   box-shadow: 0px 0px 5px black;
