--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -138,20 +138,34 @@ body {
 		height: $feature-content-height;
 		width: $feature-content-height;
 		padding: 8px;
-		figure{
-			height: $stories-thumb-dim;
-			width: $stories-thumb-dim;
-			background-color: #000;
-			margin: $stories-thumb-margin;
-			padding: 0px;
-			@include clearfix;
-			float: right;
-			@include box-shadow(0px 0px 6px #ddd);
-			img{
-				width: 100%;
+		ul{
+			list-style: none;
+			margin: 0px;
+			width: $feature-content-height;
+			height: $feature-content-height;
+			padding-left: 0px;
+			li{
+				height: $stories-thumb-dim;
+				width: $stories-thumb-dim;
+				background-color: #000;
+				margin: $stories-thumb-margin;
+				padding: 0px;
+				@include clearfix;
+				float: right;
+				@include box-shadow(0px 0px 6px #ddd);
+				figure{
+					height: $stories-thumb-dim;
+					width: $stories-thumb-dim;
+					margin: 0px;
+
+					img{
+						width: 100%;
+					}
+				}
 			}
 		}
-		.opened{
+
+		li.opened{
 			@include box-shadow(0px 0px 6px #333);
 		}
 	}
