--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -118,7 +118,15 @@ body {
   padding: 8px;
 }
 /* line 141, ../sass/style.scss */
-#stories .navlinks figure {
+#stories .navlinks ul {
+  list-style: none;
+  margin: 0px;
+  width: 324.667px;
+  height: 324.667px;
+  padding-left: 0px;
+}
+/* line 147, ../sass/style.scss */
+#stories .navlinks ul li {
   height: 96.222px;
   width: 96.222px;
   background-color: #000;
@@ -131,24 +139,30 @@ body {
   -moz-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 150, ../sass/style.scss */
-#stories .navlinks figure img {
+/* line 156, ../sass/style.scss */
+#stories .navlinks ul li figure {
+  height: 96.222px;
+  width: 96.222px;
+  margin: 0px;
+}
+/* line 161, ../sass/style.scss */
+#stories .navlinks ul li figure img {
   width: 100%;
 }
-/* line 154, ../sass/style.scss */
-#stories .navlinks .opened {
+/* line 168, ../sass/style.scss */
+#stories .navlinks li.opened {
   -webkit-box-shadow: 0px 0px 6px #333333;
   -moz-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 158, ../sass/style.scss */
+/* line 172, ../sass/style.scss */
 #stories .story {
   width: 649.333px;
   position: absolute;
   top: 0px;
   display: none;
 }
-/* line 163, ../sass/style.scss */
+/* line 177, ../sass/style.scss */
 #stories .story .story-image {
   width: 324.667px;
   height: 332.667px;
@@ -158,11 +172,11 @@ body {
   float: left;
   background-color: #000;
 }
-/* line 170, ../sass/style.scss */
+/* line 184, ../sass/style.scss */
 #stories .story .story-image img {
   width: 100%;
 }
-/* line 174, ../sass/style.scss */
+/* line 188, ../sass/style.scss */
 #stories .story section.story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -173,22 +187,22 @@ body {
   *zoom: 1;
   float: right;
 }
-/* line 182, ../sass/style.scss */
+/* line 196, ../sass/style.scss */
 #stories .story section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
 }
-/* line 186, ../sass/style.scss */
+/* line 200, ../sass/style.scss */
 #stories .story section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 188, ../sass/style.scss */
+/* line 202, ../sass/style.scss */
 #stories .story section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
-/* line 194, ../sass/style.scss */
+/* line 208, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more {
   background-color: #d42222;
   border: none;
@@ -208,15 +222,15 @@ body {
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 208, ../sass/style.scss */
+/* line 222, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:hover {
   background-color: #ed3232;
 }
-/* line 212, ../sass/style.scss */
+/* line 226, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:active {
   background-color: #a61c1f;
 }
-/* line 217, ../sass/style.scss */
+/* line 231, ../sass/style.scss */
 #stories .story.opened {
   display: block;
 }
@@ -224,7 +238,7 @@ body {
 /*
 * For the Photos feature.
 */
-/* line 226, ../sass/style.scss */
+/* line 240, ../sass/style.scss */
 #photos .feature-content {
   margin: 0px;
   padding: 0px;
@@ -234,35 +248,35 @@ body {
   float: left;
   width: 100%;
 }
-/* line 235, ../sass/style.scss */
+/* line 249, ../sass/style.scss */
 #photos .photo {
   float: left;
   display: none;
 }
-/* line 238, ../sass/style.scss */
+/* line 252, ../sass/style.scss */
 #photos .photo figure {
   width: 100%;
   height: 100%;
   margin: 0px;
 }
-/* line 242, ../sass/style.scss */
+/* line 256, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
   position: relative;
   top: -200px;
 }
-/* line 251, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 255, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 #photos .content {
   overflow: hidden;
   *zoom: 1;
   z-index: 0;
 }
-/* line 260, ../sass/style.scss */
+/* line 274, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   width: 73.167px;
@@ -271,7 +285,7 @@ body {
   margin: 4px;
   margin-left: 896.833px;
 }
-/* line 268, ../sass/style.scss */
+/* line 282, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -284,12 +298,12 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 276, ../sass/style.scss */
+/* line 290, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 281, ../sass/style.scss */
+/* line 295, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -webkit-box-shadow: 0px 0px 5px black;
   -moz-box-shadow: 0px 0px 5px black;
